<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/light_mode_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:fontFamily="@font/ys_display_regular"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="@dimen/sixteenDP"
        android:layout_marginRight="@dimen/sixteenDP"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/settings"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="#000000"
        app:iconTintMode="src_in"
        tools:ignore="MissingConstraints,VisualLintButtonSize"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="505dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="@dimen/sixteenDP"
        android:layout_marginRight="@dimen/sixteenDP"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/media"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        app:cornerRadius="@dimen/sixteenDP"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="#000000"
        app:iconTintMode="src_in"
        tools:ignore="MissingConstraints,VisualLintButtonSize"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="282dp" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="@dimen/sixteenDP"
        android:layout_marginRight="@dimen/sixteenDP"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/search"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="#000000"
        app:iconTintMode="src_in"
        tools:ignore="MissingConstraints,VisualLintButtonSize"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="64dp" />


</LinearLayout>
